BasicWebApp/security-group.tf
/* WebDMZ security group */
resource "aws_security_group" "web_dmz" {
  name = "web_dmz_group"
  description = "Allows inbound HTTP and SSH to all instances in the VPC"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }
  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }
  
  tags = {
    Name = "web_dmz" 
  }
}
